Add LF support (RDM6300)

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,8 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-  Wire
-  SPI
-  adafruit/Adafruit BusIO@^1.14.1
-  m2m-solutions/M2M Solutions TLV Library@^1.0.2
+	Wire
+	SPI
+	adafruit/Adafruit BusIO@^1.14.1
+	m2m-solutions/M2M Solutions TLV Library@^1.0.2
+	arduino12/rdm6300@^2.0.0
