--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:esp32]
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -19,3 +19,22 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.14.1
 	m2m-solutions/M2M Solutions TLV Library@^1.0.2
 	arduino12/rdm6300@^2.0.0
+
+[env:esp32-ota]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	Wire
+	SPI
+	adafruit/Adafruit BusIO@^1.14.1
+	m2m-solutions/M2M Solutions TLV Library@^1.0.2
+	arduino12/rdm6300@^2.0.0
+
+; change to your variables 
+upload_protocol = espota
+upload_port = acs-reader.local
+upload_flags = 
+    --port=3232
+    --auth='YOUPASS .env'
