--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,6 @@ lib_deps =
 	Wire
 	SPI
 	adafruit/Adafruit BusIO@^1.14.1
-	m2m-solutions/M2M Solutions TLV Library@^1.0.2
 	arduino12/rdm6300@^2.0.0
 
 [env:esp32-ota]
@@ -29,12 +28,9 @@ lib_deps =
 	Wire
 	SPI
 	adafruit/Adafruit BusIO@^1.14.1
-	m2m-solutions/M2M Solutions TLV Library@^1.0.2
 	arduino12/rdm6300@^2.0.0
-
-; change to your variables 
 upload_protocol = espota
 upload_port = acs-reader.local
 upload_flags = 
-    --port=3232
-    --auth='YOUPASS .env'
+	--port=3232
+	--auth=hellokitty
