--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:esp32]
 platform = espressif32
-board = esp32dev
+board = lolin_s2_mini
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
@@ -19,18 +19,18 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.14.1
 	arduino12/rdm6300@^2.0.0
 
-[env:esp32-ota]
-platform = espressif32
-board = esp32dev
-framework = arduino
-monitor_speed = 115200
-lib_deps = 
-	Wire
-	SPI
-	adafruit/Adafruit BusIO@^1.14.1
-	arduino12/rdm6300@^2.0.0
-upload_protocol = espota
-upload_port = acs-reader.local
-upload_flags = 
-	--port=3232
-	--auth=hellokitty
+; [env:esp32-ota]
+; platform = espressif32
+; board = lolin_s2_mini
+; framework = arduino
+; monitor_speed = 115200
+; lib_deps = 
+; 	Wire
+; 	SPI
+; 	adafruit/Adafruit BusIO@^1.14.1
+; 	arduino12/rdm6300@^2.0.0
+; upload_protocol = espota
+; upload_port = acs-reader.local
+; upload_flags = 
+; 	--port=3232
+; 	--auth=hellokitty
