add new library

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:esp32]
 platform = espressif32
-board = lolin_s2_mini
+board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
